finished first commit

--- a/life.html
+++ b/life.html
@@ -31,12 +31,16 @@ something fills me and I realize with that one exhale that this "Thing" permeate
 whether seen or unseen by my eyes.  I am immersed in It.  Science classes are great to take with 
 the detailed look on life, down to the invisible.  I believe linking spirit (not religion) and 
 science could solve many problems we experience today and I know there's already proof of it taking 
-place.  I found a nice little video that has a written meditation and beautiful scenery that I'm 
-sure you'll enjoy. Click on the lotus flower below to watch it.</p>
+place.</p><p2 class="animated bounce">I found a nice little video that has a written meditation and beautiful scenery that I'm 
+sure you'll enjoy. Click on the lotus flower below to watch it.</p2>
 <p><a href="https://www.youtube.com/watch?v=q9SjEydhQVg">
-<img class="circlepic hover" src="https://s-media-cache-ak0.pinimg.com/736x/62/a4/7d/62a47d8e4ab364cf476f25a473b23c75.jpg" 
+<img class="circlepic :hover" src="https://s-media-cache-ak0.pinimg.com/736x/62/a4/7d/62a47d8e4ab364cf476f25a473b23c75.jpg" 
 alt="glowing lotus flower"></p></a>
-<p3 class="green-text">Enter your email for daily inspiration:</p3>
+<div><p3 class="green-text">Enter your email for daily inspiration:</p3>
+<form action="life-url">
+  <input type="text" placeholder="email address">
+  <button type="submit">Submit</button>
+</form></div>
 <style>.thin-green-border{border-color:green;
 border-width:5px;
 border-style:solid;
@@ -49,25 +53,31 @@ height: auto;
 }
 p {font-size: 18px;}
 ul {font-size: 18px;}
-p3 {font-size: 18px; text-align: center;}
+p3 {font-size: 18px; text-align: center;
+}
 img {display: block;
     margin: auto;
     width: 40%;}
-    img:hover { 
-    background-color: yellow;
+img:hover {
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 }
+div {float:right;}
 .green-text {color:green;}
 
 body {margin:40px 200px 40px 200px;
 padding:0; background-color: silver;
 }
-.left {float:left;
-width:300px;}
 .text-align {text-align: center;}
 h1{font-size:30px; font-family:arial;
 font-weight: bold;
     text-align: center;
     padding:20px 10px 20px 20px;
+}
+
+p2 {font-size: 18px;
+animation-name: bounce;
+animation-duration: 120s;
 }
 .blue-text {color:blue;}
 #white-text {color: white;}
